feat: add stripe as payment
